# all-masters-web

./: .gitmodules  pyproject.toml  run.py  util.py
deploy/: docker-compose.yaml
src/: config.py  config_paramaters.py  log_settings.py  main.py
src/routers/: profiles.py  static_text.py
src/schemas/: schemas.py
src/static/css/: profiles.css
src/static/js/: profiles.js
src/templates/: profiles.html  rules.html
src/templates/errors/: 404.html
