[project]
name = "all-masters-web"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "psutil>=7.0.0",
    "pydantic-settings>=2.10.1",
    "pydentic>=0.0.1.dev3",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
